# superset_spcs

./: .env.local.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.snowflake/: .cli_version.cache  config.toml.example
.snowflake/logs/: snowflake-cli.log.2026-01-30  snowflake-cli.log.2026-01-31
cli/: spcs.sh
config/: spcs.env.example
docker/: Dockerfile  requirements.txt
infra/spcs/: service-allinone.yaml  service-managed.yaml  service.yaml
infra/spcs/jobs/: bootstrap_admin.yaml  bootstrap_allinone.yaml  pg_restore.yaml
scripts/: spcs_allinone_start.sh  spcs_bootstrap.sh
superset/config/: sf_security.py  snowflake_remote_user_middleware.py  spcs_snowflake_engine_spec.py  superset_config.py
tests/: test_middleware.py
